🌑Fixed dark mode braking event labels. Made event time bold🌑

--- a/BetterEDT/src/main/resources/darkSasuke.css
+++ b/BetterEDT/src/main/resources/darkSasuke.css
@@ -17,6 +17,10 @@
     -fx-text-fill: #AFB1B3;
 }
 
+.label-excluded {
+    -fx-text-fill: -fx-text-inner-color; /* This will use the default text color */
+}
+
 
 /* Pane */
 .pane-grid{
